--- a/App/index.html
+++ b/App/index.html
@@ -10,12 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="css/iconfont-append.css" />
 		<script type="text/javascript">
-			mui.init({
-				preloadPages: [{
-					id: 'login',
-					url: 'Pages/login.html'
-				}]
-			});
+			mui.init();
 		</script>
 	</head>
 	<body>
