--- a/Display/display.html
+++ b/Display/display.html
@@ -34,8 +34,8 @@
     var hrefs = [
         //第一次
         [
-            './flies/王络的自我介绍.html',
-            './flies/周珂永.html',
+            './Flies/王络的自我介绍.html',
+            './Flies/周珂永.html',
             './万迁 网络工程 第一次作业/自我介绍.html',
             './于洋  网工 第一次作业/自我介绍.html',
             './孙佳琪/自我介绍/index.html',
@@ -45,7 +45,7 @@
             './韦彩娜/index.html',
             './魏兴霖/index.html',
             './万千/index.html',
-            './flies/张馨莹前端作业.html',
+            './Flies/张馨莹前端作业.html',
             './何福川 计科三班 第一次作业/自我介绍.html',
             './陈红全，物联网二班，自我介绍/index.html',
             './田嘉楠物联网工程第一次作业/index.html'
